--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@athena/forge": "^2.8.3",
     "json-server": "^0.15.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.11.0",
@@ -16,7 +17,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-
   },
   "eslintConfig": {
     "extends": "react-app"
